Added Air Fryer Hush Puppies recipe.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/sesame-chicken.html">Sesame Chicken for Slow Cooker</a>
         <a href="./recipes/three-cheese-brocolli-manicotti.html">Three-Cheese Brocolli Manicotti</a>
+        <a href="./recipes/air-fryer-hush-puppies.html">Air Fryer Hush Puppies</a>
     </body>
 </html>
