--- a/recipes/three-cheese-brocolli-manicotti.html
+++ b/recipes/three-cheese-brocolli-manicotti.html
@@ -8,7 +8,7 @@
     <!--Title header-->
     <h1>Three-Cheese Brocolli Manicotti</h1>
     <!--Image of finished dish-->
-    <img src="../images/three-cheese-brocolli-manicotti.jpeg">
+    <img src="../images/three-cheese-brocolli-manicotti.jpeg" width="800">
     <!--Description-->
     <h2>Description</h2>
     <p>You can use either full-fat or part-skim ricotta, mozzarella cheese instead of provolone, and any chopped, cooked vegetable for the brocolli.</p>
