Fixed the link list.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="./recipes/sesame-chicken.html">Sesame Chicken for Slow Cooker</a>
-            <a href="./recipes/three-cheese-brocolli-manicotti.html">Three-Cheese Brocolli Manicotti</a>
-            <a href="./recipes/air-fryer-hush-puppies.html">Air Fryer Hush Puppies</a>
+            <li><a href="./recipes/sesame-chicken.html">Sesame Chicken for Slow Cooker</a></li>
+            <li><a href="./recipes/three-cheese-brocolli-manicotti.html">Three-Cheese Brocolli Manicotti</a></li>
+            <li><a href="./recipes/air-fryer-hush-puppies.html">Air Fryer Hush Puppies</a></li>
         </ul>
     </body>
 </html>
