--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="recipe-list">
             <li><a href="./recipes/sesame-chicken.html">Sesame Chicken for Slow Cooker</a></li>
             <li><a href="./recipes/three-cheese-brocolli-manicotti.html">Three-Cheese Brocolli Manicotti</a></li>
             <li><a href="./recipes/air-fryer-hush-puppies.html">Air Fryer Hush Puppies</a></li>
